--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,21 +12,21 @@
             android:id="@+id/salutation"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="MPD - CW1 Currency Convertor"
+            android:text="@string/title_main"
             android:textSize="20sp" />
 
         <Button
             android:id="@+id/startButton"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="Press to get data" />
+            android:text="@string/button_load" />
 
         <androidx.appcompat.widget.SearchView
             android:id="@+id/searchView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:iconifiedByDefault="false"
-            android:queryHint="Search by code, name or country"
+            android:queryHint="@string/search_hint"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp" />
 
