--- a/app/src/main/res/layout/row_currency_item.xml
+++ b/app/src/main/res/layout/row_currency_item.xml
@@ -1,28 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="horizontal"
     android:padding="8dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/textCode"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:textSize="18sp"
-        android:text="USD" />
+    <ImageView
+        android:id="@+id/imageFlag"
+        android:layout_width="48dp"
+        android:layout_height="32dp"
+        android:layout_marginEnd="12dp"
+        android:scaleType="centerCrop"
+        android:contentDescription="Currency flag"
+        android:src="@drawable/flag_unknown" />
 
-    <TextView
-        android:id="@+id/textRate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="1.2345" />
-
-    <TextView
-        android:id="@+id/textDescription"
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="British Pound Sterling to US Dollar"
-        android:textSize="12sp" />
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/textCode"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/textRate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/textDescription"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="12sp" />
+    </LinearLayout>
+
 </LinearLayout>
