--- a/app/src/main/res/layout/view_app_title.xml
+++ b/app/src/main/res/layout/view_app_title.xml
@@ -1,19 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/titleContainer"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_margin="12dp"
+    android:background="@drawable/title_background"
+    android:gravity="center"
+    android:orientation="vertical"
+    android:padding="16dp">
 
     <TextView
-        android:id="@+id/textAppTitle"
-        android:layout_width="match_parent"
+        android:id="@+id/appTitleText"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/title_main"
-        android:textSize="24sp"
+        android:text="@string/app_name"
+        android:textSize="26sp"
         android:textStyle="bold"
-        android:gravity="center"
-        android:paddingTop="16dp"
-        android:paddingBottom="8dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginBottom="8dp" />
+        android:textColor="#2E2E2E"
+        android:letterSpacing="0.03"
+        android:gravity="center"/>
+
+    <TextView
+        android:id="@+id/appSubtitleText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/subtitle_name"
+        android:textSize="14sp"
+        android:textColor="#666666"
+        android:paddingTop="4dp"
+        android:gravity="center"/>
+
 </LinearLayout>
