--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -43,7 +43,8 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerViewMainCurrencies"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="140dp"
+            android:nestedScrollingEnabled="false"
             android:paddingBottom="8dp" />
 
     </LinearLayout>
