--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -40,12 +40,25 @@
             android:paddingTop="8dp"
             android:paddingBottom="4dp" />
 
+<!--        <TextView-->
+<!--            android:id="@+id/textSwipeHint"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:paddingBottom="4dp"-->
+<!--            android:text="@string/swipe_hint"-->
+<!--            android:textColor="#888888"-->
+<!--            android:textSize="12sp" />-->
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerViewMainCurrencies"
             android:layout_width="match_parent"
-            android:layout_height="140dp"
+            android:layout_height="wrap_content"
             android:nestedScrollingEnabled="false"
             android:paddingBottom="8dp" />
+
+        <View
+            android:layout_height="8dp"
+            android:layout_width="match_parent"/>
 
     </LinearLayout>
 
